se corrigen paddings y se agrega link linkedin

--- a/index.html
+++ b/index.html
@@ -68,10 +68,9 @@
             <li class="texto">Logistics Coordinator - CONARCO Alambres y Soldaduras S.A. Tel: 15-6599-9232</li>
         </p>
     </div>
-
-
-
-
+    <div>
+        <link rel="stylesheet" href="https://www.linkedin.com/in/nicolas-ariel-martin/">
+    </div>
     </body>
 </div>
 </html>
