se corrigen paddings y se agrega link linkedin

--- a/index.html
+++ b/index.html
@@ -68,10 +68,19 @@
             <li class="texto">Logistics Coordinator - CONARCO Alambres y Soldaduras S.A. Tel: 15-6599-9232</li>
         </p>
     </div>
-
-
-
-
+    <div>
+        <h2 class="subtitulo">
+            DATOS DE CONTACTO    
+        </h2>
+        <P>
+            <li class="texto"> <a href="https://www.linkedin.com/in/nicolas-ariel-martin/">Linkedin</a></li>
+            <br>       
+            <li class="texto"> <a href="nico.am89@gmail.com">Mail</a></li>
+            <br>
+            <li class="texto">TELEFONO DE CONTACTO: 15-4058-4764 </li>
+            <br>
+        </P>
+    </div>
     </body>
 </div>
 </html>
