--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Curriculum Vitae - Nicolas Ariel Martin</title>
     <link rel="stylesheet" href="Styles/styles.css">
 </head>
-<div id="alienacion">
+<div id="alineacion">
     <body>
         <header class="titulo">
             <h1>Nicolas Ariel Martin</h1>
@@ -75,10 +75,13 @@
         <P>
             <li class="texto"> <a href="https://www.linkedin.com/in/nicolas-ariel-martin/">Linkedin</a></li>
             <br>       
-            <li class="texto"> <a href="nico.am89@gmail.com">Mail</a></li>
+            <li class="texto"> <a href="mailto:nico.am89@gmail.com">Mail</a></li>
             <br>
             <li class="texto">TELEFONO DE CONTACTO: 15-4058-4764 </li>
-            <br>
+            <BR>
+            <li class="texto">DIRECCION: A. Colombo 2032 PB-B, Villa Raffo, Bs. As.</li>
+            <BR>
+            <li class="texto"><a href="https://drive.google.com/file/d/1bHpxjDN8vytktbDStFAUzM9UCx-0Y6dP/view?usp=drive_link">CV DESCARGABLE</a></li>
         </P>
     </div>
     </body>
