se agregan experiencias laborales anteriores y se le da formato a las listas

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
         </h2>
         <p>
             <h3 class="encabezado">Cursos:</h3>
-            <li class="texto">Programación web Full Stack - Nucba.com (Nov. 2023 - en Curso)</li>
-            <li class="texto">SQL - Coderhouse.com (nov. 2023)</li>
-            <li class="texto">Carrera de Data Analytics - Coderhouse.com (may. 2023)</li>
-            <li class="texto">Power BI - Análisis de Datos & Business Intelligence - Udemy.com (ago. 2022)</li>
-            <li class="texto">Python TOTAL - Programador Avanzado - Udemy.com (jul. 2022)</li>
-            <li class="texto">SQL Server: Desde Cero a Profesional - Udemy.com (jun. 2022)</li>
-            <li class="texto">Canva de 0 a 100: crea diseños de forma profesional (Ago. 2023)</li>     
+            <li class="texto listas">Programación web Full Stack - Nucba.com (Nov. 2023 - en Curso)</li>
+            <li class="texto listas"> SQL - Coderhouse.com (nov. 2023)</li>
+            <li class="texto listas">Carrera de Data Analytics - Coderhouse.com (may. 2023)</li>
+            <li class="texto listas">Power BI - Análisis de Datos & Business Intelligence - Udemy.com (ago. 2022)</li>
+            <li class="texto listas">Python TOTAL - Programador Avanzado - Udemy.com (jul. 2022)</li>
+            <li class="texto listas">SQL Server: Desde Cero a Profesional - Udemy.com (jun. 2022)</li>
+            <li class="texto listas">Canva de 0 a 100: crea diseños de forma profesional (Ago. 2023)</li>     
         </p>
     </div>
     <div>
@@ -33,11 +33,23 @@
         </h2>
         <p>
             <h3 class="encabezado">Analytical Technologies SA - Bussines Analyst</h3>
-            <li class="enfasis">Octubre 2022 - Actualmente</li>
-            <li class="texto">Creación de Dashborads de control. Confección de reportes. Análisis de datos, Generación, seguimiento y análisis de los presupuestos anuales y revisiones periódicas, control de KPI’s. control de gastos, consolidación de información, Implementación de mejoras, Etc.</li>     
-            <h3 class="encabezado">Conarco Alambres y Soldaduras SA - FP&A Analyst Sr.</h3>
-            <li class="enfasis">Noviembre 2013 - Septiembre 2022</li>
-            <li class="texto">Análisis de datos.  Confección de reportes. Generación, seguimiento y análisis de los presupuestos anuales y revisiones mensuales. Control de KPI’s. Control de gastos. Consolidación de información. Implementación de mejoras. Cierres mensuales. Dictado de capacitaciones y liderazgo de proyectos. Etc.</li>
+            <li class="enfasis listas">Octubre 2022 - Actualmente</li>
+            <li class="texto listas">Creación de Dashborads de control. Confección de reportes. Análisis de datos, Generación, seguimiento y análisis de los presupuestos anuales y revisiones periódicas, control de KPI’s. control de gastos, consolidación de información, Implementación de mejoras, Etc.</li>     
+            <h3 class="encabezado listas">Conarco Alambres y Soldaduras SA - FP&A Analyst Sr.</h3>
+            <li class="enfasis listas">Noviembre 2013 - Septiembre 2022</li>
+            <li class="texto listas">Análisis de datos.  Confección de reportes. Generación, seguimiento y análisis de los presupuestos anuales y revisiones mensuales. Control de KPI’s. Control de gastos. Consolidación de información. Implementación de mejoras. Cierres mensuales. Dictado de capacitaciones y liderazgo de proyectos. Etc.</li>
+            <h3 class="encabezado">Conarco Alambres y Soldaduras SA - Payments Analyst</h3>
+            <li class="enfasis listas">Noviembre 2012 - Noviembre 2013</li>
+            <h3 class="encabezado">Metalurgica Ruedamas SRL - Tesorero</h3>
+            <li class="enfasis listas">Junio 2011 - Noviembre 2012</li>
+            <h3 class="encabezado">Arte Gráfica Nesdan SRL - Analista Contable</h3>
+            <li class="enfasis listas">Noviembre 2010 - Mayo 2011</li>
+            <h3 class="encabezado">Marle construcciones SA - Liquidador de sueldos</h3>
+            <li class="enfasis listas">Noviembre 2008 - Noviembre 2010</li>
+            <h3 class="encabezado">Tasaciones Integrales SA - Cadete Administrativo</h3>
+            <li class="enfasis listas">Junio 2007 - Febrero 2008</li>
+            <h3 class="encabezado">Estudio contable Toloza - Pasante</h3>
+            <li class="enfasis listas">Abril 2006 - Junio 2006</li>
         </p>
     </div>
     <div>
@@ -45,16 +57,16 @@
             APTITUDES    
         </h2>
         <p>
-            <li class="texto">Inglés (Oral y escrito): Avanzado Profesional C1.</li>
-            <li class="texto">Excel (Incluyendo macros): Avanzado Profesional.</li> 
-            <li class="texto">Sistemas de gestión (SAP, BPC, BW, Tango, etc.): Avanzado.</li> 
-            <li class="texto">Paquete Office: Avanzado.</li> 
-            <li class="texto">Power BI (Incluyendo DAX): Intermedio.</li> 
-            <li class="texto">Análisis de datos: Intermedio.</li> 
-            <li class="texto">SQL: Básico.</li> 
-            <li class="texto">Python: Básico.</li> 
-            <li class="texto">HTML: Básico.</li>     
-            <li class="texto">CSS: Básico</li>
+            <li class="texto listas">Inglés (Oral y escrito): Avanzado Profesional C1.</li>
+            <li class="texto listas">Excel (Incluyendo macros): Avanzado Profesional.</li> 
+            <li class="texto listas">Sistemas de gestión (SAP, BPC, BW, Tango, etc.): Avanzado.</li> 
+            <li class="texto listas">Paquete Office: Avanzado.</li> 
+            <li class="texto listas">Power BI (Incluyendo DAX): Intermedio.</li> 
+            <li class="texto listas">Análisis de datos: Intermedio.</li> 
+            <li class="texto listas">SQL: Básico.</li> 
+            <li class="texto listas">Python: Básico.</li> 
+            <li class="texto listas">HTML: Básico.</li>     
+            <li class="texto listas">CSS: Básico</li>
         </p>
     </div>
     <div>
@@ -63,9 +75,9 @@
         </h2>
         <p>
             <h3 class="encabezado">SOLEDAD RODRÍGUEZ DARRAS</h3>
-            <li class="texto">Ex Accounting Manager - CONARCO Alambres y Soldaduras S.A. Tel: 15-6265-2443</li>     
+            <li class="texto listas">Ex Accounting Manager - CONARCO Alambres y Soldaduras S.A. Tel: 15-6265-2443</li>     
             <h3 class="encabezado">FERNANDO CEJAS</h3>
-            <li class="texto">Logistics Coordinator - CONARCO Alambres y Soldaduras S.A. Tel: 15-6599-9232</li>
+            <li class="texto listas">Logistics Coordinator - CONARCO Alambres y Soldaduras S.A. Tel: 15-6599-9232</li>
         </p>
     </div>
     <div>
@@ -73,15 +85,11 @@
             DATOS DE CONTACTO    
         </h2>
         <P>
-            <li class="texto"> <a href="https://www.linkedin.com/in/nicolas-ariel-martin/">Linkedin</a></li>
-            <br>       
-            <li class="texto"> <a href="mailto:nico.am89@gmail.com">Mail</a></li>
-            <br>
-            <li class="texto">TELEFONO DE CONTACTO: 15-4058-4764 </li>
-            <BR>
-            <li class="texto">DIRECCION: A. Colombo 2032 PB-B, Villa Raffo, Bs. As.</li>
-            <br>
-            <li class="texto"><a href="https://drive.google.com/file/d/1bHpxjDN8vytktbDStFAUzM9UCx-0Y6dP/view?usp=drive_link">CV DESCARGABLE</a></li>
+            <li class="texto listas"> <a href="https://www.linkedin.com/in/nicolas-ariel-martin/">Linkedin</a></li>
+            <li class="texto listas"> <a href="mailto:nico.am89@gmail.com">Mail</a></li>
+            <li class="texto listas">TELEFONO DE CONTACTO: 15-4058-4764 </li>
+            <li class="texto listas">DIRECCION: A. Colombo 2032 PB-B, Villa Raffo, Bs. As.</li>
+            <li class="texto listas"><a href="https://drive.google.com/file/d/1bHpxjDN8vytktbDStFAUzM9UCx-0Y6dP/view?usp=drive_link">CV DESCARGABLE</a></li>
         </P>
     </div>
     </body>
