--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <h1>Nicolas Ariel Martin</h1>
             <H2>BUSINESS & DATA ANALYST - POWER BI - SQL - HTML - CSS - PYTHON - FP&A</H2>
         </header>
-    <div>
+    <div class="columnas">
         <h2 class="subtitulo">
             EDUCACIÓN        
         </h2>
@@ -27,7 +27,7 @@
             <li class="texto listas">Canva de 0 a 100: crea diseños de forma profesional (Ago. 2023)</li>     
         </p>
     </div>
-    <div>
+    <div class="columnas">
         <h2 class="subtitulo">
             EXPERIENCIA LABORAL       
         </h2>
@@ -85,7 +85,7 @@
             DATOS DE CONTACTO    
         </h2>
         <P>
-            <li class="texto listas"> <a href="https://www.linkedin.com/in/nicolas-ariel-martin/">Linkedin</a></li>
+            <li class="texto listas"> <a href="https://www.linkedin.com/in/nicolas-ariel-martin/" target="_blank">Linkedin</a></li>
             <li class="texto listas"> <a href="mailto:nico.am89@gmail.com">Mail</a></li>
             <li class="texto listas">TELEFONO DE CONTACTO: 15-4058-4764 </li>
             <li class="texto listas">DIRECCION: A. Colombo 2032 PB-B, Villa Raffo, Bs. As.</li>
