se agrega foto y se corrige formato

--- a/index.html
+++ b/index.html
@@ -6,14 +6,18 @@
     <title>Curriculum Vitae - Nicolas Ariel Martin</title>
     <link rel="stylesheet" href="Styles/styles.css">
 </head>
-<div id="alineacion">
+
+<div class="alineacion">
     <body>
         <header class="titulo">
             <h1>Nicolas Ariel Martin</h1>
             <H2>BUSINESS & DATA ANALYST - POWER BI - SQL - HTML - CSS - PYTHON - FP&A</H2>
         </header>
     <div class="columnas">
-        <h2 class="subtitulo">
+        <div>
+            <img class="foto alinear-foto" src="Foto CV.jpg" alt="Foto de Perfil">
+        </div>
+        <h2 class="subtitulo alinear-foto">
             EDUCACIÓN        
         </h2>
         <p>
@@ -90,6 +94,7 @@
             <li class="texto listas">TELEFONO DE CONTACTO: 15-4058-4764 </li>
             <li class="texto listas">DIRECCION: A. Colombo 2032 PB-B, Villa Raffo, Bs. As.</li>
             <li class="texto listas"><a href="https://drive.google.com/file/d/1bHpxjDN8vytktbDStFAUzM9UCx-0Y6dP/view?usp=drive_link">CV DESCARGABLE</a></li>
+            <li class="texto listas"> <a href="https://drive.google.com/drive/folders/1VnBLp2jDPG8_uQ_VxpZtizZPvnDuvVau?usp=drive_link" target="_blank">Porfolio</a></li>
         </P>
     </div>
     </body>
