--- a/index.html
+++ b/index.html
@@ -68,35 +68,32 @@
             <li class="texto listas">Power BI (Incluyendo DAX): Intermedio.</li> 
             <li class="texto listas">Análisis de datos: Intermedio.</li> 
             <li class="texto listas">SQL: Básico.</li> 
-            <li class="texto listas">Python: Básico.</li> 
-            <li class="texto listas">HTML: Básico.</li>     
+             <li class="texto listas">HTML: Básico.</li>     
             <li class="texto listas">CSS: Básico</li>
         </p>
     </div>
-    <div>
-        <h2 class="subtitulo">
-            REFERENCIAS     
-        </h2>
-        <p>
+    </div>
+    <ul class="acorh">
+        <li id="opcion1"><a href="#opcion1">REFERENCIAS</a>
+          <ul>
             <h3 class="encabezado">SOLEDAD RODRÍGUEZ DARRAS</h3>
             <li class="texto listas">Ex Accounting Manager - CONARCO Alambres y Soldaduras S.A. Tel: 15-6265-2443</li>     
             <h3 class="encabezado">FERNANDO CEJAS</h3>
             <li class="texto listas">Logistics Coordinator - CONARCO Alambres y Soldaduras S.A. Tel: 15-6599-9232</li>
-        </p>
-    </div>
-    <div>
-        <h2 class="subtitulo">
-            DATOS DE CONTACTO    
-        </h2>
-        <P>
+          </ul>
+        </li>
+        <li id="opcion2"><a href="#opcion2">DATOS DE CONTACTO</a>
+          <ul>
             <li class="texto listas"> <a href="https://www.linkedin.com/in/nicolas-ariel-martin/" target="_blank">Linkedin</a></li>
             <li class="texto listas"> <a href="mailto:nico.am89@gmail.com">Mail</a></li>
             <li class="texto listas">TELEFONO DE CONTACTO: 15-4058-4764 </li>
             <li class="texto listas">DIRECCION: A. Colombo 2032 PB-B, Villa Raffo, Bs. As.</li>
             <li class="texto listas"><a href="https://drive.google.com/file/d/1bHpxjDN8vytktbDStFAUzM9UCx-0Y6dP/view?usp=drive_link">CV DESCARGABLE</a></li>
-            <li class="texto listas"> <a href="https://drive.google.com/drive/folders/1VnBLp2jDPG8_uQ_VxpZtizZPvnDuvVau?usp=drive_link" target="_blank">Porfolio</a></li>
-        </P>
-    </div>
+            <li class="texto listas"><a href="ttps://github.com/Nicoam89?tab=repositories" target="_blank">Porfolio github</a></li>
+            <li class="texto listas"> <a href="https://drive.google.com/drive/folders/1VnBLp2jDPG8_uQ_VxpZtizZPvnDuvVau?usp=drive_link" target="_blank">Porfolio Reportes</a></li>
+          </ul>
+        </li>
+      </ul>
     </body>
 </div>
 </html>
