--- a/index.html
+++ b/index.html
@@ -74,26 +74,27 @@
     </div>
     </div>
     <ul class="acorh">
-        <li id="opcion1"><a href="#opcion1">REFERENCIAS</a>
-          <ul>
-            <h3 class="encabezado">SOLEDAD RODRÍGUEZ DARRAS</h3>
-            <li class="texto listas">Ex Accounting Manager - CONARCO Alambres y Soldaduras S.A. Tel: 15-6265-2443</li>     
-            <h3 class="encabezado">FERNANDO CEJAS</h3>
-            <li class="texto listas">Logistics Coordinator - CONARCO Alambres y Soldaduras S.A. Tel: 15-6599-9232</li>
-          </ul>
-        </li>
+
         <li id="opcion2"><a href="#opcion2">DATOS DE CONTACTO</a>
           <ul>
             <li class="texto listas"> <a href="https://www.linkedin.com/in/nicolas-ariel-martin/" target="_blank">Linkedin</a></li>
             <li class="texto listas"> <a href="mailto:nico.am89@gmail.com">Mail</a></li>
-            <li class="texto listas">TELEFONO DE CONTACTO: 15-4058-4764 </li>
-            <li class="texto listas">DIRECCION: A. Colombo 2032 PB-B, Villa Raffo, Bs. As.</li>
             <li class="texto listas"><a href="https://drive.google.com/file/d/1bHpxjDN8vytktbDStFAUzM9UCx-0Y6dP/view?usp=drive_link">CV DESCARGABLE</a></li>
-            <li class="texto listas"><a href="ttps://github.com/Nicoam89?tab=repositories" target="_blank">Porfolio github</a></li>
+            <li class="texto listas"><a href="https://github.com/Nicoam89?tab=repositories" target="_blank">Porfolio github</a></li>
             <li class="texto listas"> <a href="https://drive.google.com/drive/folders/1VnBLp2jDPG8_uQ_VxpZtizZPvnDuvVau?usp=drive_link" target="_blank">Porfolio Reportes</a></li>
-          </ul>
+            <li class="texto listas">TELEFONO DE CONTACTO: 15-4058-4764 </li>
+            <li class="texto listas">DIRECCION: A. Colombo 2032 PB-B, Villa Raffo, Bs. As.</li> 
+        </ul>
         </li>
-      </ul>
+        <li id="opcion1"><a href="#opcion1">REFERENCIAS</a>
+            <ul>
+              <h3 class="encabezado">SOLEDAD RODRÍGUEZ DARRAS</h3>
+              <li class="texto listas">Ex Accounting Manager - CONARCO Alambres y Soldaduras S.A. Tel: 15-6265-2443</li>     
+              <h3 class="encabezado">FERNANDO CEJAS</h3>
+              <li class="texto listas">Logistics Coordinator - CONARCO Alambres y Soldaduras S.A. Tel: 15-6599-9232</li>
+            </ul>
+          </li>  
+        </ul>
     </body>
 </div>
 </html>
