se corrige formato de datos de contacto

--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
                 <li class="texto listas"> <a href="mailto:nico.am89@gmail.com">Mail</a></li>
                 <li class="texto listas"><a href="https://drive.google.com/file/d/1bHpxjDN8vytktbDStFAUzM9UCx-0Y6dP/view?usp=drive_link">CV DESCARGABLE</a></li>
                 <li class="texto listas"><a href="https://github.com/Nicoam89?tab=repositories" target="_blank">Porfolio github</a></li>
-                <li class="texto listas"> <a href="https://drive.google.com/drive/folders/1VnBLp2jDPG8_uQ_VxpZtizZPvnDuvVau?usp=drive_link" target="_blank">Porfolio Reportes</a></li>
-                <li class="texto listas">TELEFONO DE CONTACTO: 15-4058-4764 </li>
-                <li class="texto listas">DIRECCION: A. Colombo 2032 PB-B, Villa Raffo, Bs. As.</li> 
+                <li class="texto listas"><a href="https://drive.google.com/drive/folders/1VnBLp2jDPG8_uQ_VxpZtizZPvnDuvVau?usp=drive_link" target="_blank">Porfolio Reportes</a></li>
+                <li class="texto listas"><a href="">TELEFONO DE CONTACTO: 15-4058-4764</a></li>
+                <li class="texto listas"><a href="">DIRECCION: A. Colombo 2032 PB-B, Villa Raffo, Bs. As.</a></li> 
             </ul>
         </li>
         <li id="opcion1"><a href="#opcion1">REFERENCIAS</a>
