se agrega resumen personal

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <header class="titulo">
             <h1>Nicolas Ariel Martin</h1>
             <H2>BUSINESS & DATA ANALYST - POWER BI - SQL - HTML - CSS - PYTHON - FP&A</H2>
+            <h3 class="resumen">Soy una persona dinámica, capaz de adaptarme a diferentes entornos laborales. Proactivo y con gran capacidad de resolver problemas dentro de equipos de trabajo que están enfocados a cumplir objetivos claros. Me motivan los nuevos desafíos para poder crecer en el desarrollo personal y profesional, con gran espíritu emprendedor.</h3>
         </header>
     <div class="columnas">
         <div>
