se agrega curso

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
             <li class="texto listas">Power BI - Análisis de Datos & Business Intelligence - Udemy.com (ago. 2022)</li>
             <li class="texto listas">Python TOTAL - Programador Avanzado - Udemy.com (jul. 2022)</li>
             <li class="texto listas">SQL Server: Desde Cero a Profesional - Udemy.com (jun. 2022)</li>
-            <li class="texto listas">Canva de 0 a 100: crea diseños de forma profesional (Ago. 2023)</li>     
+            <li class="texto listas">Canva de 0 a 100: crea diseños de forma profesional (Ago. 2023)</li>
+            <li class="texto listas">Diseño gráfico para principiantes (Abr. 2024)</li>    
         </p>
     </div>
     <div class="columnas">
