se agregan links certificados

--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
         <p>
             <h3 class="encabezado">Cursos:</h3>
             <li class="texto listas">Desarrollo Web - Coderhouse.com (May. 2024 - en Curso)</li>
-            <li class="texto listas"> SQL - Coderhouse.com (nov. 2023)</li>
-            <li class="texto listas">Carrera de Data Analytics - Coderhouse.com (may. 2023)</li>
-            <li class="texto listas">Power BI - Análisis de Datos & Business Intelligence - Udemy.com (ago. 2022)</li>
-            <li class="texto listas">Python TOTAL - Programador Avanzado - Udemy.com (jul. 2022)</li>
-            <li class="texto listas">SQL Server: Desde Cero a Profesional - Udemy.com (jun. 2022)</li>
-            <li class="texto listas">Canva de 0 a 100: crea diseños de forma profesional (Ago. 2023)</li>
-            <li class="texto listas">Diseño gráfico para principiantes (Abr. 2024)</li>    
+            <a href="https://www.coderhouse.com/ar/certificados/655486c7b4768c5abe55ee4e?lang=es" target="_blank"><li class="texto listas">SQL - Coderhouse.com (nov. 2023)</li></a>
+            <a href="https://www.coderhouse.com/ar/certificados/649168889d8fb10002f8dabb?lang=es" target="_blank"><li class="texto listas">Carrera de Data Analytics - Coderhouse.com (may. 2023)</li></a>
+            <a href="https://www.udemy.com/certificate/UC-9fadab71-2020-4fa3-9a13-f8116c8906d9/" target="_blank"><li class="texto listas">Power BI - Análisis de Datos & Business Intelligence - Udemy.com (ago. 2022)</li></a>
+            <a href="https://www.udemy.com/certificate/UC-366a46db-f94e-496b-ad43-61e2cbfeceab/" target="_blank"><li class="texto listas">Python TOTAL - Programador Avanzado - Udemy.com (jul. 2022)</li></a>
+            <a href="https://www.udemy.com/certificate/UC-0359368c-ad0c-45f1-b328-de8bfcf3e8c8/" target="_blank"><li class="texto listas">SQL Server: Desde Cero a Profesional - Udemy.com (jun. 2022)</li></a>
+            <a href="https://www.domestika.org/es/certificates/5a11ac1b85d561015c08b88895501c89" target="_blank"><li class="texto listas">Canva de 0 a 100: crea diseños de forma profesional - Domestika.com (Ago. 2023)</li></a>
+            <a href="https://www.domestika.org/es/certificates/577b445864433cc6e77c1c4d57fbf671" target="_blank"><li class="texto listas">Diseño gráfico para principiantes - Domestika.com (Abr. 2024)</li></a>
         </p>
     </div>
     <div class="columnas">
