se corrige footer

--- a/index.html
+++ b/index.html
@@ -98,4 +98,10 @@
         </ul>
     </body>
 </div>
+<footer>
+        <!-- Desarrollador -->
+        <p>Desarrollado por SS&D Consultora - Soluciones Simples & Dinamicas ®</p>
+
+</footer>
+
 </html>
