--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curriculum Vitae - Nicolas Ariel Martin</title>
     <link rel="stylesheet" href="Styles/styles.css">
+    <meta name="description" content="CV Nicolas Ariel Martin">
+    <meta name="keywords" content="BUSINESS Analyst, DATA ANALYST, POWER BI, SQL, HTML, CSS, PYTHON, FP&A">
 </head>
 
 <div class="alineacion">
@@ -100,7 +102,7 @@
 </div>
 <footer>
         <!-- Desarrollador -->
-        <p>Desarrollado por SS&D Consultora - Soluciones Simples & Dinamicas ®</p>
+        <a href="https://ssydconsultora.vercel.app/index.html" target="_blank" rel="noopener noreferrer"><p>Desarrollado por SS&D Consultora - Soluciones Simples & Dinamicas ®</p></a>
 
 </footer>
 
