--- a/index.html
+++ b/index.html
@@ -5,78 +5,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curriculum Vitae - Nicolas Ariel Martin</title>
     <link rel="stylesheet" href="Styles/styles.css">
+    <!-- CDN Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!-- SEO -->
     <meta name="description" content="CV Nicolas Ariel Martin">
     <meta name="keywords" content="BUSINESS Analyst, DATA ANALYST, POWER BI, SQL, HTML, CSS, PYTHON, FP&A">
 </head>
 
 <div class="alineacion">
+
     <body>
         <header class="titulo">
             <h1>Nicolas Ariel Martin</h1>
-            <H2>BUSINESS & DATA ANALYST - POWER BI - SQL - HTML - CSS - PYTHON - FP&A</H2>
-            <h3 class="resumen">Soy una persona dinámica, capaz de adaptarme a diferentes entornos laborales. Proactivo y con gran capacidad de resolver problemas dentro de equipos de trabajo que están enfocados a cumplir objetivos claros. Me motivan los nuevos desafíos para poder crecer en el desarrollo personal y profesional, con gran espíritu emprendedor.</h3>
+            <H2>Business Analyst - Desarrollador Web - Python</H2>
+            <div class="columnas">
+            <div>
+                    <img class="foto alinear-foto" src="Foto CV.jpg" alt="Foto de Perfil">
+            </div>
         </header>
-    <div class="columnas">
-        <div>
-            <img class="foto alinear-foto" src="Foto CV.jpg" alt="Foto de Perfil">
-        </div>
-        <h2 class="subtitulo alinear-foto">
-            EDUCACIÓN        
-        </h2>
-        <p>
-            <h3 class="encabezado">Cursos:</h3>
-            <li class="texto listas">Desarrollo Web - Coderhouse.com (May. 2024 - en Curso)</li>
-            <a href="https://www.coderhouse.com/ar/certificados/655486c7b4768c5abe55ee4e?lang=es" target="_blank"><li class="texto listas">SQL - Coderhouse.com (nov. 2023)</li></a>
-            <a href="https://www.coderhouse.com/ar/certificados/649168889d8fb10002f8dabb?lang=es" target="_blank"><li class="texto listas">Carrera de Data Analytics - Coderhouse.com (may. 2023)</li></a>
-            <a href="https://www.udemy.com/certificate/UC-9fadab71-2020-4fa3-9a13-f8116c8906d9/" target="_blank"><li class="texto listas">Power BI - Análisis de Datos & Business Intelligence - Udemy.com (ago. 2022)</li></a>
-            <a href="https://www.udemy.com/certificate/UC-366a46db-f94e-496b-ad43-61e2cbfeceab/" target="_blank"><li class="texto listas">Python TOTAL - Programador Avanzado - Udemy.com (jul. 2022)</li></a>
-            <a href="https://www.udemy.com/certificate/UC-0359368c-ad0c-45f1-b328-de8bfcf3e8c8/" target="_blank"><li class="texto listas">SQL Server: Desde Cero a Profesional - Udemy.com (jun. 2022)</li></a>
-            <a href="https://www.domestika.org/es/certificates/5a11ac1b85d561015c08b88895501c89" target="_blank"><li class="texto listas">Canva de 0 a 100: crea diseños de forma profesional - Domestika.com (Ago. 2023)</li></a>
-            <a href="https://www.domestika.org/es/certificates/577b445864433cc6e77c1c4d57fbf671" target="_blank"><li class="texto listas">Diseño gráfico para principiantes - Domestika.com (Abr. 2024)</li></a>
-        </p>
+            <!-- Navegador -->
+          <div class="pos-f-t">
+            <nav class="navbar navbar-dark bg-black">
+              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+            </nav>
+            <div class="collapse" id="navbarToggleExternalContent">
+              <div class="bg-dark p-4">
+                <span class="text-muted">
+                <a class="item-nav text-white" href="index.html">Home</a>
+                <a class="item-nav text-white" href="./pages/educacion.html">Educacion</a>
+                <a class="item-nav text-white" href="./pages/experiencia.html">Experiencia Laboral</a>
+                <a class="item-nav text-white" href="./pages/aptitudes.html">Aptitudes</a>
+                <a class="item-nav text-white" href="./pages/referencias.html">Referencias</a>
+              </span>
+              </div>
+            </div>
+    
+          </div>
+
+            <h3 class="resumen">Soy una persona dinámica, capaz de adaptarme a diferentes entornos laborales. Proactivo y con gran capacidad de resolver problemas dentro de equipos de trabajo que están enfocados a cumplir objetivos claros. Me motivan los nuevos desafíos para poder crecer en el desarrollo personal y profesional, con gran espíritu emprendedor.
+            </h3>
+
+
+
+
     </div>
-    <div class="columnas">
-        <h2 class="subtitulo">
-            EXPERIENCIA LABORAL       
-        </h2>
-        <p>
-            <h3 class="encabezado">Analytical Technologies SA - Bussines Analyst</h3>
-            <li class="enfasis listas">Octubre 2022 - Actualmente</li>
-            <li class="texto listas">Creación de Dashborads de control. Confección de reportes. Análisis de datos, Generación, seguimiento y análisis de los presupuestos anuales y revisiones periódicas, control de KPI’s. control de gastos, consolidación de información, Implementación de mejoras, Etc.</li>     
-            <h3 class="encabezado listas">Conarco Alambres y Soldaduras SA - FP&A Analyst Sr.</h3>
-            <li class="enfasis listas">Noviembre 2013 - Septiembre 2022</li>
-            <li class="texto listas">Análisis de datos.  Confección de reportes. Generación, seguimiento y análisis de los presupuestos anuales y revisiones mensuales. Control de KPI’s. Control de gastos. Consolidación de información. Implementación de mejoras. Cierres mensuales. Dictado de capacitaciones y liderazgo de proyectos. Etc.</li>
-            <h3 class="encabezado">Conarco Alambres y Soldaduras SA - Payments Analyst</h3>
-            <li class="enfasis listas">Noviembre 2012 - Noviembre 2013</li>
-            <h3 class="encabezado">Metalurgica Ruedamas SRL - Tesorero</h3>
-            <li class="enfasis listas">Junio 2011 - Noviembre 2012</li>
-            <h3 class="encabezado">Arte Gráfica Nesdan SRL - Analista Contable</h3>
-            <li class="enfasis listas">Noviembre 2010 - Mayo 2011</li>
-            <h3 class="encabezado">Marle construcciones SA - Liquidador de sueldos</h3>
-            <li class="enfasis listas">Noviembre 2008 - Noviembre 2010</li>
-            <h3 class="encabezado">Tasaciones Integrales SA - Cadete Administrativo</h3>
-            <li class="enfasis listas">Junio 2007 - Febrero 2008</li>
-            <h3 class="encabezado">Estudio contable Toloza - Pasante</h3>
-            <li class="enfasis listas">Abril 2006 - Junio 2006</li>
-        </p>
-    </div>
-    <div>
-        <h2 class="subtitulo">
-            APTITUDES    
-        </h2>
-        <p>
-            <li class="texto listas">Inglés (Oral y escrito): Avanzado Profesional C1.</li>
-            <li class="texto listas">Excel (Incluyendo macros): Avanzado Profesional.</li> 
-            <li class="texto listas">Sistemas de gestión (SAP, BPC, BW, Tango, etc.): Avanzado.</li> 
-            <li class="texto listas">Paquete Office: Avanzado.</li> 
-            <li class="texto listas">Power BI (Incluyendo DAX): Intermedio.</li> 
-            <li class="texto listas">Análisis de datos: Intermedio.</li> 
-            <li class="texto listas">SQL: Básico.</li> 
-             <li class="texto listas">HTML: Básico.</li>     
-            <li class="texto listas">CSS: Básico</li>
-        </p>
-    </div>
-    </div>
+    <!-- Datos de Contacto y Referencias -->
+    <footer>
     <ul class="acorh">
         <li id="opcion2"><a href="#opcion2">DATOS DE CONTACTO</a>
             <ul>
@@ -84,26 +60,22 @@
                 <li class="texto listas"> <a href="mailto:nico.am89@gmail.com">Mail</a></li>
                 <li class="texto listas"><a href="https://drive.google.com/file/d/1bHpxjDN8vytktbDStFAUzM9UCx-0Y6dP/view?usp=drive_link">CV DESCARGABLE</a></li>
                 <li class="texto listas"><a href="https://github.com/Nicoam89?tab=repositories" target="_blank">Porfolio github</a></li>
-                <li class="texto listas"><a href="https://drive.google.com/drive/folders/1VnBLp2jDPG8_uQ_VxpZtizZPvnDuvVau?usp=drive_link" target="_blank">Porfolio Reportes</a></li>
+                <li class="texto listas"><a href="https://drive.google.com/drive/folders/1VnBLp2jDPG8_uQ_VxpZtizZPvnDuvVau?usp=drive_link" target="_blank">Porfolio Reportes Power BI</a></li>
                 <li class="texto listas"><a href="">TELEFONO DE CONTACTO: 15-4058-4764</a></li>
-                <li class="texto listas"><a href="">DIRECCION: A. Colombo 2032 PB-B, Villa Raffo, Bs. As.</a></li> 
+                <li class="texto listas"><a href="">DIRECCION: Villa Raffo, Bs. As.</a></li> 
             </ul>
         </li>
-        <li id="opcion1"><a href="#opcion1">REFERENCIAS</a>
-            <ul>
-              <h3 class="encabezado">SOLEDAD RODRÍGUEZ DARRAS</h3>
-              <li class="texto listas">Ex Accounting Manager - CONARCO Alambres y Soldaduras S.A. Tel: 15-6265-2443</li>     
-              <h3 class="encabezado">FERNANDO CEJAS</h3>
-              <li class="texto listas">Logistics Coordinator - CONARCO Alambres y Soldaduras S.A. Tel: 15-6599-9232</li>
-            </ul>
-          </li>  
-        </ul>
+    </ul>
+
+    </footer>
+            <!-- Desarrollador -->
+            <a class="desarrollador" href="https://ssydconsultora.vercel.app/index.html" target="_blank" rel="noopener noreferrer"><p>Desarrollado por SS&D Consultora - Soluciones Simples & Dinamicas ® 2024</p></a>    
     </body>
 </div>
-<footer>
-        <!-- Desarrollador -->
-        <a href="https://ssydconsultora.vercel.app/index.html" target="_blank" rel="noopener noreferrer"><p>Desarrollado por SS&D Consultora - Soluciones Simples & Dinamicas ®</p></a>
-
-</footer>
-
+          <!-- Scripts -->
+          <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+        </script>
+            <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+            <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </html>
