se continuan con las modificaciones de layout y formato

--- a/index.html
+++ b/index.html
@@ -34,19 +34,19 @@
             <div>
                 
             </div>
-          <div class="container text-center">
+          <div class="container">
             <div class="row g-2">
               <div class="col-6">
-                <div class="p-3 menu-item d-flex align-items-center justify-content-center"><a class="text-decoration-none" href="./pages/educacion.html">Educacion</a></div>
+                <div class="p-3 menu-item d-flex align-items-center justify-content-center border border-5"><a class="text-decoration-none text-white" href="./pages/educacion.html">EDUCACIÓN</a></div>
               </div>
               <div class="col-6">
-                <div class="p-3 menu-item d-flex align-items-center justify-content-center"><a class="text-decoration-none" href="./pages/experiencia.html">Experiencia Laboral</a></div>
+                <div class="p-3 menu-item d-flex align-items-center justify-content-center border border-5"><a class="text-decoration-none text-white" href="./pages/experiencia.html">EXPERIENCIA LABORAL</a></div>
               </div>
               <div class="col-6">
-                <div class="p-3 menu-item d-flex align-items-center justify-content-center"><a class="text-decoration-none" href="./pages/aptitudes.html">Aptitudes</a></div>
+                <div class="p-3 menu-item d-flex align-items-center justify-content-center border border-5"><a class="text-decoration-none text-white" href="./pages/aptitudes.html">APTITUDES</a></div>
               </div>
               <div class="col-6">
-                <div class="p-3 menu-item d-flex align-items-center justify-content-center"><a class="text-decoration-none" href="./pages/referencias.html">Referencias</a></div>
+                <div class="p-3 menu-item d-flex align-items-center justify-content-center border border-5"><a class="text-decoration-none text-white" href="./pages/referencias.html">REFERENCIAS</a></div>
               </div>
             </div>
           </div>          
@@ -68,7 +68,7 @@
 
     </footer>
             <!-- Desarrollador -->
-            <a class="desarrollador text-decoration-none" href="https://ssydconsultora.vercel.app/index.html" target="_blank" rel="noopener noreferrer"><p>Desarrollado por SS&D Consultora - Soluciones Simples & Dinamicas ® 2024</p></a>    
+            <a class="desarrollador text-decoration-none text-black" href="https://ssydconsultora.vercel.app/index.html" target="_blank" rel="noopener noreferrer"><p>Desarrollado por SS&D Consultora - Soluciones Simples & Dinamicas ® 2024</p></a>    
     </body>
 </div>
           <!-- Scripts -->
