--- a/pages/aptitudes.html
+++ b/pages/aptitudes.html
@@ -28,11 +28,11 @@
         <div class="collapse" id="navbarToggleExternalContent">
           <div class="bg-dark p-4">
             <span class="text-muted">
-            <a class="item-nav text-white" href="index.html">Home</a>
-            <a class="item-nav text-white" href="/pages/educacion.html">Educacion</a>
-            <a class="item-nav text-white" href="/pages/experiencia.html">Experiencia Laboral</a>
-            <a class="item-nav text-white" href="/pages/aptitudes.html">Aptitudes</a>
-            <a class="item-nav text-white" href="/pages/referencias.html">Referencias</a>
+                <a class="item-nav text-white" href="/index.html">HOME</a>
+                <a class="item-nav text-white" href="/pages/educacion.html">EDUCACIÓN</a>
+                <a class="item-nav text-white" href="/pages/experiencia.html">EXPERIENCIA LABORAL</a>
+                <a class="item-nav text-white" href="/pages/aptitudes.html">APTITUDES</a>
+                <a class="item-nav text-white" href="/pages/referencias.html">REFERENCIAS</a>
           </span>
           </div>
         </div>
@@ -70,8 +70,8 @@
         </ul>
     
         </footer>
-                <!-- Desarrollador -->
-                <a class="desarrollador" href="https://ssydconsultora.vercel.app/index.html" target="_blank" rel="noopener noreferrer"><p>Desarrollado por SS&D Consultora - Soluciones Simples & Dinamicas ® 2024</p></a> 
+            <!-- Desarrollador -->
+            <a class="desarrollador text-decoration-none text-black" href="https://ssydconsultora.vercel.app/index.html" target="_blank" rel="noopener noreferrer"><p>Desarrollado por SS&D Consultora - Soluciones Simples & Dinamicas ® 2024</p></a>
 
 </body>
           <!-- Scripts -->
