se modifica formato

--- a/pages/aptitudes.html
+++ b/pages/aptitudes.html
@@ -37,7 +37,7 @@
           </div>
         </div>
 
-    <div>
+        <main class="contenido-principal">
         <h2 class="subtitulo">
             APTITUDES    
         </h2>
@@ -52,7 +52,7 @@
             <li class="texto listas">HTML: Básico.</li>     
             <li class="texto listas">CSS: Básico.</li>
         </p>
-    </div>
+    </main>
 
     <footer>
         <ul class="acorh">
