--- a/pages/experiencia.html
+++ b/pages/experiencia.html
@@ -37,7 +37,9 @@
           </div>
         </div>
    
-    <div class="columnas">
+    <div class="">
+
+        <main class="contenido-principal">
         <h2 class="subtitulo">
             EXPERIENCIA LABORAL       
         </h2>
@@ -61,6 +63,7 @@
             <h3 class="encabezado">Estudio contable Toloza - Pasante</h3>
             <li class="enfasis listas">Abril 2006 - Junio 2006</li>
         </p>
+         </main>
     </div>
     <footer>
         <ul class="acorh">
