--- a/pages/referencias.html
+++ b/pages/referencias.html
@@ -37,14 +37,17 @@
           </div>
         </div>
       </div> 
-    <li id="opcion1"><a href="#opcion1">REFERENCIAS</a>
+
+      <main class="contenido-principal">
+        <h2 class="subtitulo">REFERENCIAS</h2>
         <ul>
           <h3 class="encabezado">SOLEDAD RODRÍGUEZ DARRAS</h3>
           <li class="texto listas">Ex Accounting Manager - CONARCO Alambres y Soldaduras S.A. Tel: 15-6265-2443</li>     
           <h3 class="encabezado">FERNANDO CEJAS</h3>
           <li class="texto listas">Logistics Coordinator - CONARCO Alambres y Soldaduras S.A. Tel: 15-6599-9232</li>
         </ul>
-      </li>  
+
+    </main>
 
     <footer>
         <ul class="acorh">
