se modifica layout en pag educacion

--- a/index.html
+++ b/index.html
@@ -35,17 +35,19 @@
                 
             </div>
           <div class="container">
-            <div class="row g-2">
-              <div class="col-6">
+            <div class="row">
+              <div class="col">
                 <div class="p-3 menu-item d-flex align-items-center justify-content-center border border-5"><a class="text-decoration-none text-white" href="./pages/educacion.html">EDUCACIÓN</a></div>
               </div>
-              <div class="col-6">
+              <div class="col">
                 <div class="p-3 menu-item d-flex align-items-center justify-content-center border border-5"><a class="text-decoration-none text-white" href="./pages/experiencia.html">EXPERIENCIA LABORAL</a></div>
               </div>
-              <div class="col-6">
+            </div>
+              <div class="row">
+              <div class="col">
                 <div class="p-3 menu-item d-flex align-items-center justify-content-center border border-5"><a class="text-decoration-none text-white" href="./pages/aptitudes.html">APTITUDES</a></div>
               </div>
-              <div class="col-6">
+              <div class="col">
                 <div class="p-3 menu-item d-flex align-items-center justify-content-center border border-5"><a class="text-decoration-none text-white" href="./pages/referencias.html">REFERENCIAS</a></div>
               </div>
             </div>
