--- a/pages/educacion.html
+++ b/pages/educacion.html
@@ -13,12 +13,12 @@
     </head>
 <body>
     <a href="/index.html"><header class="titulo">
-        <h1>Nicolas Ariel Martin</h1>
-        <H2>Business Analyst - Desarrollador Web - Python</H2>
+        <h1 class="fw-bold">Nicolas Ariel Martin</h1>
+        <H2 class="fw-bold">Business Analyst - Desarrollador Web - Python</H2>
         <div class="columnas">
     </header>
     </a>
-                  <!-- Navegador -->
+        <!-- Navegador -->
       <div class="pos-f-t">
         <nav class="navbar navbar-dark bg-black">
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,20 +38,68 @@
         </div>
 
     <main class="contenido-principal">
-    <h2 class="subtitulo">
+    <h2 class="subtitulo fw-bold">
         EDUCACIÓN        
     </h2>
-    <p>
-        <h3 class="encabezado">Cursos:</h3>
-        <li class="texto listas">Desarrollo Web - Coderhouse.com (May. 2024 - en Curso)</li>
-        <a class="text-decoration-none text-black" href="https://www.coderhouse.com/ar/certificados/655486c7b4768c5abe55ee4e?lang=es" target="_blank"><li class="texto listas">SQL - Coderhouse.com (nov. 2023)</li></a>
-        <a class="text-decoration-none text-black" href="https://www.coderhouse.com/ar/certificados/649168889d8fb10002f8dabb?lang=es" target="_blank"><li class="texto listas">Carrera de Data Analytics - Coderhouse.com (may. 2023)</li></a>
-        <a class="text-decoration-none text-black" href="https://www.udemy.com/certificate/UC-9fadab71-2020-4fa3-9a13-f8116c8906d9/" target="_blank"><li class="texto listas">Power BI - Análisis de Datos & Business Intelligence - Udemy.com (ago. 2022)</li></a>
-        <a class="text-decoration-none text-black" href="https://www.udemy.com/certificate/UC-366a46db-f94e-496b-ad43-61e2cbfeceab/" target="_blank"><li class="texto listas">Python TOTAL - Programador Avanzado - Udemy.com (jul. 2022)</li></a>
-        <a class="text-decoration-none text-black" href="https://www.udemy.com/certificate/UC-0359368c-ad0c-45f1-b328-de8bfcf3e8c8/" target="_blank"><li class="texto listas">SQL Server: Desde Cero a Profesional - Udemy.com (jun. 2022)</li></a>
-        <a class="text-decoration-none text-black" href="https://www.domestika.org/es/certificates/5a11ac1b85d561015c08b88895501c89" target="_blank"><li class="texto listas">Canva de 0 a 100: crea diseños de forma profesional - Domestika.com (Ago. 2023)</li></a>
-        <a class="text-decoration-none text-black" href="https://www.domestika.org/es/certificates/577b445864433cc6e77c1c4d57fbf671" target="_blank"><li class="texto listas">Diseño gráfico para principiantes - Domestika.com (Abr. 2024)</li></a>
-    </p>
+    
+        <h3 class="encabezado fw-bold">Cursos:</h3>
+        <section class="container">
+            <div class="row">
+                <a class="text-decoration-none text-black col" href="">
+                    <div class="texto listas item-ed">
+                        <h5 class="fw-bold">Desarrollo Web - Coderhouse.com (May. 2024 - en Curso)</h5>
+                        <img class="cert-edu" src="/certificados/work-in-progress.jpg" alt="work in progress">
+                    </div>
+                </a>
+                <a class="text-decoration-none text-black col" href="https://www.coderhouse.com/ar/certificados/655486c7b4768c5abe55ee4e?lang=es" target="_blank">
+                    <div class="texto listas item-ed">
+                        <h5 class="fw-bold">SQL - Coderhouse.com (nov. 2023)</h5>
+                        <img class="cert-edu" src="/certificados/certificado-SQL-Coderhouse.png" alt="certificado SQL coderhouse">
+                    </div>
+                </a>
+            </div>
+            <div class="row">
+                <a class="text-decoration-none text-black col" href="https://www.coderhouse.com/ar/certificados/649168889d8fb10002f8dabb?lang=es" target="_blank">
+                    <div class="texto listas item-ed">
+                        <h5 class="fw-bold">Carrera de Data Analytics - Coderhouse.com (may. 2023)</h5>
+                        <img class="cert-edu" src="/certificados/certificado-data-analytics.png" alt="Certificado Data Analytics">
+                    </div>
+                </a>
+                <a class="text-decoration-none text-black col" href="https://www.udemy.com/certificate/UC-9fadab71-2020-4fa3-9a13-f8116c8906d9/" target="_blank">
+                   <div class="texto listas item-ed">
+                        <h5 class="fw-bold">Power BI - Análisis de Datos & Business Intelligence - Udemy.com (ago. 2022)</h5>
+                        <img class="cert-edu" src="/certificados/certificado-power-bi.jpg" alt="Certificado Power BI">
+                    </div>
+                </a>
+            </div>
+            <div class="row">
+            <a class="text-decoration-none text-black col" href="https://www.udemy.com/certificate/UC-366a46db-f94e-496b-ad43-61e2cbfeceab/" target="_blank">
+                <div class="texto listas item-ed">
+                    <h5 class="fw-bold">Python TOTAL - Programador Avanzado - Udemy.com (jul. 2022)</h5>
+                    <img class="cert-edu" src="/certificados/certificado-python.jpg" alt="Certificado Python">
+                </div>
+            </a>
+            <a class="text-decoration-none text-black col" href="https://www.udemy.com/certificate/UC-0359368c-ad0c-45f1-b328-de8bfcf3e8c8/" target="_blank">
+                <div class="texto listas item-ed">
+                    <h5 class="fw-bold">SQL Server: Desde Cero a Profesional - Udemy.com (jun. 2022)</h5>
+                    <img class="cert-edu" src="/certificados/certificado-SQL-Udemy.jpg" alt="Certificado SQL Udemy">
+                </div>
+            </a>
+        </div>
+        <div class="row">
+            <a class="text-decoration-none text-black col" href="https://www.domestika.org/es/certificates/577b445864433cc6e77c1c4d57fbf671" target="_blank"><div class="texto lista item-ed">
+                    <h5 class="fw-bold">Diseño gráfico para principiantes - Domestika.com (Abr. 2024)</h5>
+                    <img class="cert-edu" src="/certificados/certificado-diseño.png" alt="Certificado Diseño">
+               </div>
+             </a>
+            <a class="text-decoration-none text-black col" href="https://www.domestika.org/es/certificates/5a11ac1b85d561015c08b88895501c89" target="_blank">
+                <div class="texto listas item-ed">
+                    <h5 class="fw-bold">Canva de 0 a 100: crea diseños de forma profesional - Domestika.com (Ago. 2023)</h5>
+                    <img class="cert-edu" src="/certificados/certificado-canva.png" alt="Certificado Canva">
+                </div>
+            </a>
+        </div>
+    </section>
     </main>
 </div>
 <footer>
