se modifica layout de las paginas restantes

--- a/pages/aptitudes.html
+++ b/pages/aptitudes.html
@@ -38,19 +38,19 @@
         </div>
 
         <main class="contenido-principal">
-        <h2 class="subtitulo">
+        <h2 class="subtitulo fw-bold">
             APTITUDES    
         </h2>
         <p>
-            <li class="texto listas">Inglés (Oral y escrito): Avanzado Profesional C1.</li>
-            <li class="texto listas">Excel (Incluyendo macros): Avanzado Profesional.</li> 
-            <li class="texto listas">Sistemas de gestión (SAP, BPC, BW, Tango, etc.): Avanzado.</li> 
-            <li class="texto listas">Paquete Office: Avanzado.</li> 
-            <li class="texto listas">Power BI (Incluyendo DAX): Intermedio.</li> 
-            <li class="texto listas">Análisis de datos: Intermedio.</li> 
-            <li class="texto listas">SQL: Básico.</li> 
-            <li class="texto listas">HTML: Básico.</li>     
-            <li class="texto listas">CSS: Básico.</li>
+            <li class="texto listas fw-bold">Inglés (Oral y escrito): Avanzado Profesional C1</li>
+            <li class="texto listas fw-bold">Excel (Incluyendo macros): Avanzado Profesional</li> 
+            <li class="texto listas fw-bold">Sistemas de gestión (SAP, BPC, BW, Tango, etc.): Avanzado</li> 
+            <li class="texto listas fw-bold">Paquete Office: Avanzado</li> 
+            <li class="texto listas fw-bold">Power BI (Incluyendo DAX): Intermedio</li> 
+            <li class="texto listas fw-bold">Análisis de datos: Intermedio</li> 
+            <li class="texto listas fw-bold">SQL: Básico</li> 
+            <li class="texto listas fw-bold">HTML: Básico</li>     
+            <li class="texto listas fw-bold">CSS: Básico</li>
         </p>
     </main>
 
