--- a/pages/experiencia.html
+++ b/pages/experiencia.html
@@ -13,8 +13,8 @@
     </head>
 <body>
     <a href="/index.html"><header class="titulo">
-        <h1>Nicolas Ariel Martin</h1>
-        <H2>Business Analyst - Desarrollador Web - Python</H2>
+        <h1 class="fw-bold">Nicolas Ariel Martin</h1>
+        <H2 class="fw-bold">Business Analyst - Desarrollador Web - Python</H2>
         <div class="columnas">
     </header>
     </a>
@@ -40,28 +40,28 @@
     <div class="">
 
         <main class="contenido-principal">
-        <h2 class="subtitulo">
+        <h2 class="subtitulo fw-bold">
             EXPERIENCIA LABORAL       
         </h2>
         <p>
-            <h3 class="encabezado">Analytical Technologies SA - Bussines Analyst</h3>
-            <li class="enfasis listas">Octubre 2022 - Actualmente</li>
+            <h3 class="encabezado fw-bold">Analytical Technologies SA - Bussines Analyst</h3>
+            <li class="enfasis listas fw-bold">Octubre 2022 - Actualmente</li>
             <li class="texto listas">Creación de Dashborads de control. Confección de reportes. Análisis de datos, Generación, seguimiento y análisis de los presupuestos anuales y revisiones periódicas, control de KPI's. control de gastos, consolidación de información, Implementación de mejoras, Etc.</li>     
-            <h3 class="encabezado listas">Conarco Alambres y Soldaduras SA - FP&A Analyst Sr.</h3>
-            <li class="enfasis listas">Noviembre 2013 - Septiembre 2022</li>
+            <h3 class="encabezado listas fw-bold">Conarco Alambres y Soldaduras SA - FP&A Analyst Sr.</h3>
+            <li class="enfasis listas fw-bold">Noviembre 2013 - Septiembre 2022</li>
             <li class="texto listas">Análisis de datos.  Confección de reportes. Generación, seguimiento y análisis de los presupuestos anuales y revisiones mensuales. Control de KPI’s. Control de gastos. Consolidación de información. Implementación de mejoras. Cierres mensuales. Dictado de capacitaciones y liderazgo de proyectos. Etc.</li>
-            <h3 class="encabezado">Conarco Alambres y Soldaduras SA - Payments Analyst</h3>
-            <li class="enfasis listas">Noviembre 2012 - Noviembre 2013</li>
-            <h3 class="encabezado">Metalurgica Ruedamas SRL - Tesorero</h3>
-            <li class="enfasis listas">Junio 2011 - Noviembre 2012</li>
-            <h3 class="encabezado">Arte Gráfica Nesdan SRL - Analista Contable</h3>
-            <li class="enfasis listas">Noviembre 2010 - Mayo 2011</li>
-            <h3 class="encabezado">Marle construcciones SA - Liquidador de sueldos</h3>
-            <li class="enfasis listas">Noviembre 2008 - Noviembre 2010</li>
-            <h3 class="encabezado">Tasaciones Integrales SA - Cadete Administrativo</h3>
-            <li class="enfasis listas">Junio 2007 - Febrero 2008</li>
-            <h3 class="encabezado">Estudio contable Toloza - Pasante</h3>
-            <li class="enfasis listas">Abril 2006 - Junio 2006</li>
+            <h3 class="encabezado fw-bold">Conarco Alambres y Soldaduras SA - Payments Analyst</h3>
+            <li class="enfasis listas fw-bold">Noviembre 2012 - Noviembre 2013</li>
+            <h3 class="encabezado fw-bold">Metalurgica Ruedamas SRL - Tesorero</h3>
+            <li class="enfasis listas fw-bold">Junio 2011 - Noviembre 2012</li>
+            <h3 class="encabezado fw-bold">Arte Gráfica Nesdan SRL - Analista Contable</h3>
+            <li class="enfasis listas fw-bold">Noviembre 2010 - Mayo 2011</li>
+            <h3 class="encabezado fw-bold">Marle construcciones SA - Liquidador de sueldos</h3>
+            <li class="enfasis listas fw-bold">Noviembre 2008 - Noviembre 2010</li>
+            <h3 class="encabezado fw-bold">Tasaciones Integrales SA - Cadete Administrativo</h3>
+            <li class="enfasis listas fw-bold">Junio 2007 - Febrero 2008</li>
+            <h3 class="encabezado fw-bold">Estudio contable Toloza - Pasante</h3>
+            <li class="enfasis listas fw-bold">Abril 2006 - Junio 2006</li>
         </p>
          </main>
     </div>
