--- a/pages/referencias.html
+++ b/pages/referencias.html
@@ -39,12 +39,16 @@
       </div> 
 
       <main class="contenido-principal">
-        <h2 class="subtitulo">REFERENCIAS</h2>
+        <h2 class="subtitulo fw-bold">REFERENCIAS</h2>
         <ul>
-          <h3 class="encabezado">SOLEDAD RODRÍGUEZ DARRAS</h3>
-          <li class="texto listas">Ex Accounting Manager - CONARCO Alambres y Soldaduras S.A. Tel: 15-6265-2443</li>     
-          <h3 class="encabezado">FERNANDO CEJAS</h3>
-          <li class="texto listas">Logistics Coordinator - CONARCO Alambres y Soldaduras S.A. Tel: 15-6599-9232</li>
+          <div class="refenrencia">
+            <h3 class="encabezado fw-bold">SOLEDAD RODRÍGUEZ DARRAS</h3>
+            <li class="texto listas">Ex Accounting Manager - CONARCO Alambres y Soldaduras S.A. Tel: 15-6265-2443</li>
+          </div>
+          <div class="refenrencia">     
+            <h3 class="encabezado fw-bold">FERNANDO CEJAS</h3>
+            <li class="texto listas">Logistics Coordinator - CONARCO Alambres y Soldaduras S.A. Tel: 15-6599-9232</li>
+         </div>
         </ul>
 
     </main>
